...
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/seed_check_1"
                    android:onClick="verifyChecks"
                    android:background="@drawable/circular_surface_ripple"
                    android:button="@drawable/checkbox"
                    android:gravity="center" />

                <TextView
...
                android:layout_marginTop="@dimen/margin_padding_size_24"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/seed_check_2"
                    android:onClick="verifyChecks"
                    android:background="@drawable/circular_surface_ripple"
                    android:button="@drawable/checkbox"
                    android:gravity="center" />

                <TextView
...
                android:layout_marginTop="@dimen/margin_padding_size_24"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/seed_check_3"
                    android:onClick="verifyChecks"
                    android:background="@drawable/circular_surface_ripple"
                    android:button="@drawable/checkbox"
                    android:gravity="center" />

                <TextView
...
                android:layout_marginTop="@dimen/margin_padding_size_24"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/seed_check_4"
                    android:onClick="verifyChecks"
                    android:background="@drawable/circular_surface_ripple"
                    android:button="@drawable/checkbox"
                    android:gravity="center" />

                <TextView
...
                android:layout_marginTop="@dimen/margin_padding_size_24"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/seed_check_5"
                    android:onClick="verifyChecks"
                    android:background="@drawable/circular_surface_ripple"
                    android:button="@drawable/checkbox"
                    android:gravity="center" />

                <TextView
...
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_size_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_verify"
                android:enabled="false"
                android:paddingTop="@dimen/margin_padding_size_16"
                android:paddingBottom="@dimen/margin_padding_size_16"
                android:gravity="center"
                style="@style/textViewButton"
                android:onClick="proceedToNextPhase"
...
