<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2021 The Decred developers
  ~ Use of this source code is governed by an ISC
  ~ license that can be found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface"
    android:orientation="vertical"
    android:padding="@dimen/margin_padding_size_24">

    <com.dcrandroid.view.PasswordInput
        android:id="@+id/ed_pass"
        app:counter_enabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/pass_strength"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_size_8"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_padding_size_8"
        android:indeterminateOnly="false"
        android:max="100"
        android:progressDrawable="@drawable/password_strength_bar_weak" />

    <com.dcrandroid.view.PasswordInput
        android:id="@+id/ed_confirm_pass"
        app:counter_enabled="true"
        android:layout_marginTop="@dimen/margin_padding_size_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_padding_size_8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textViewButton.Outline"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_8"
            style="@style/textViewButton"
            android:enabled="false"
            android:text="@string/create"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:indeterminate="true"
            android:theme="@style/CircularProgressBar"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>