<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018-2019 The Decred developers
  ~ Use of this source code is governed by an ISC
  ~ license that can be found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:minWidth="280dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greenLightTextColor"
            android:textSize="16sp"
            app:fontFamily="@font/source_sans_pro_regular_family"
            android:layout_marginTop="20dp"
            android:text="@string/enter_spending_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/blackFirstTextColor"
            android:textColorHint="@color/grayTextColor"
            android:inputType="textPassword"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="14sp"
            android:visibility="visible"
            app:fontFamily="@font/source_sans_pro_semibold_family" />

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/lightGreyBackgroundColor"
            android:textSize="14sp"
            android:visibility="visible"
            app:fontFamily="@font/source_sans_pro_semibold_family" />
    </LinearLayout>

</LinearLayout>